increased performance of editable grid, fixed bug where short keys didn't work with locked shift key, changed color of selected row element, added functionality to select all (ctrl + A)

--- a/WebVella.Erp.Web/Theme/styles.css
+++ b/WebVella.Erp.Web/Theme/styles.css
@@ -5125,7 +5125,7 @@ input{
 }
 
 .row-selected {
-	background-color: #e7ebef!important;
+	background-color: #c7c7c7!important;
 }
 
 /* ########### editable grid ############# */
